# MS365-Accountcreator

./: .gitignore  Dockerfile  Pipfile  README.md  logging_config.json  pyproject.toml  setup.py  shell.nix
.github/workflows/: main.yml
docker/: README.md  logging_config.json  ms365_accountcreator.conf  uwsgi.ini
ms365_accountcreator/: __init__.py  babel.py  config.py  routes.py
ms365_accountcreator/api/: __init__.py  account_creation.py  api_models.py  auth_helper.py  email_verification.py  root.py  util.py
ms365_accountcreator/api/v1_api/: __init__.py  account_creation.py  email_verification.py  root.py  voucher.py  voucher_verification.py
ms365_accountcreator/api/v1_api/models/: __init__.py  account_creation.py  email_verification.py  vouchers.py
ms365_accountcreator/db_models/: __init__.py  registeredEmailAddresses.py  registered_email_address.py  vouchers.py
ms365_accountcreator/debug_routes/: __init__.py  routes.py
ms365_accountcreator/logic/: __init__.py  email.py
ms365_accountcreator/logic/graph_api/: __init__.py  authentication.py
ms365_accountcreator/static/: common.js  qrcode.min.js.license  styles.css  styles_voucher.css
ms365_accountcreator/templates/: index.html  voucher.html  voucher_list_entry_template.html
ms365_accountcreator/translations/de/LC_MESSAGES/: messages.po
ms365_accountcreator/translations/en/LC_MESSAGES/: messages.po
