[tool.poetry]
name = "MS365-Accountcreator"
version = "1.1.0"
description = "A small python flask server to allow users to sign up to a Microsoft Azure Tenant using the Microsoft Graph API "
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]
license = "Mozilla Public License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-smorest = "^0.29.0"
Flask-SQLAlchemy = "^2.4"
Flask-Migrate = "^2.5"
Flask-Cors = "^3.0"
Flask-JWT-Extended = "^3.24"
requests = "^2"
msal = "^1.5"
cryptography = "^3.1"
flask-babel = "^2.0.0"
sqlalchemy-utils = "^0.36.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
